# dnn-benchmarking

./: CLAUDE.md  MVP.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/dnn_benchmarking/: __init__.py  __main__.py
src/dnn_benchmarking/cli/: __init__.py  main.py  parser.py
src/dnn_benchmarking/common/: __init__.py  exceptions.py
src/dnn_benchmarking/config/: __init__.py  benchmark_config.py
src/dnn_benchmarking/execution/: __init__.py  ab_runner.py  buffer_manager.py  executor.py  timing.py
src/dnn_benchmarking/graph/: __init__.py  loader.py  tensor_info.py  validator.py
src/dnn_benchmarking/reporting/: __init__.py  reporter.py  statistics.py
src/dnn_benchmarking/validation/: __init__.py  comparison.py  reference_provider.py  validator.py
src/dnn_benchmarking/validation/providers/: __init__.py  cpu_plugin_provider.py  pytorch_provider.py
tests/: conftest.py
tests/integration/: test_cli_integration.py  test_execution.py  test_graph_loading.py
tests/unit/config/: test_benchmark_config.py
tests/unit/execution/: test_timing.py
tests/unit/graph/: test_graph_validator.py
tests/unit/reporting/: test_reporter.py  test_statistics.py
tests/unit/validation/: __init__.py  test_comparison.py  test_pytorch_provider.py  test_reference_provider.py  test_validator.py
